src/scss/_base.scss
/* ... */
/* Elections Base */
.asset {
	width: 100%;
	padding: 0;
	background: none;
	background-color: white;
}

#election-content {
	font-family: $font-body;
	font-weight: 300;
	font-size: 14px;
	line-height: 180%;
	position: relative;
	top: 40px;
}
#election-content h1,
#election-content h2,
#election-content h3 {
	font-family:  $font-heading;
	font-weight: 100;
}
#election-content a {
	color: $color-link;
	text-decoration: none;
}
#election-content .election-overlay-button-close a {
	color: white;
}

/* Icons */

#election-app .election-icon {
	width: 38px;
	height: 38px;
	display: inline-block;
	text-align: center;
	background-image: url('../img/spritesheet.png');
	background-repeat: no-repeat;
	&.election-icon-info {
		background-image: none;
		@include border-radius(20px);
		border: 1px solid $color-gray;
		color: $color-gray;
		font-family: Times, 'Times New Roman';
		font-size: 18px;
		font-weight: 100;
		line-height: 36px;
	}
	&.election-icon-search 				    { background-position: 0px 0px; }
	&.election-icon-search-white 		  { background-position: -38px 0px; }
	&.election-icon-search-blue 		  { background-position: -76px 0px; }
	&.election-icon-arrow-right 		  { background-position: 0px -36px; }
	&.election-icon-arrow-right-white	{ background-position: -38px -36px; }
	&.election-icon-arrow-right-blue	{ background-position: -76px -36px; }
	&.election-icon-share 				    { background-position: 0px -114px; }
	&.election-icon-share-white 			{ background-position: -38px -110px; text-indent: -9999px; }
	&.election-icon-share-blue 				{ background-position: -76px -114px; }
	&.election-icon-arrow-down 				{ background-position: 0px -152px; }
	&.election-icon-arrow-down-white 	{ background-position: -38px -152px; }
	&.election-icon-arrow-down-blue 	{ background-position: -76px -152px; }
	&.election-icon-arrow-left 				{ background-position: 0px -304px; }
	&.election-icon-arrow-left-white 	{ background-position: -39px -304px; }
	&.election-icon-arrow-left-blue 	{ background-position: -76px -304px; }
	&.election-icon-new-window 				{ background-position: 0px -190px; }
	&.election-icon-new-window-white 	{ background-position: -38px -190px; }
	&.election-icon-new-window-blue 	{ background-position: -76px -190px; }
	&.election-icon-remove 				{ background-position: 0px -266px; }
	&.election-icon-remove-white 		{ background-position: -38px -266px; }
	&.election-icon-remove-blue 		{ background-position: -76px -266px; }
	&.election-icon-state 				{ background-position: 0px -228px; }
	&.election-icon-state-white 		{ background-position: -38px -228px; }
	&.election-icon-state-blue 			{ background-position: -76px -228px; }

	// Social Icons
	&.election-icon-social-close,
	&.election-icon-social-fb,
	&.election-icon-social-tw,
	&.election-icon-social-mail {
		background-image: url('../img/spritesheet-social.png');
		background-size: 114px 152px;
		box-sizing: border-box;
		height: 40px;
		width: 40px;
		@include border-radius(20px);
	}
	&.election-icon-social-close {
		background-position: 0px 0px;
		border: 1px solid $font-heading-color2;
	}
	&.election-icon-social-fb {
		background-position: 0px -38px;
		border: 1px solid darken($color-stroke, 10%);
	}
	&.election-icon-social-tw {
		background-position: 0px -76px;
		border: 1px solid darken($color-stroke, 10%);
	}
	&.election-icon-social-mail {
		background-position: 0px -114px;
		border: 1px solid darken($color-stroke, 10%);
	}
}
@media
only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (   min--moz-device-pixel-ratio: 2),
only screen and (     -o-min-device-pixel-ratio: 2/1),
only screen and (        min-device-pixel-ratio: 2),
only screen and (                min-resolution: 192dpi),
only screen and (                min-resolution: 2dppx) {
	#election-app .election-icon {
		background-image: url('../img/spritesheet@2x.png');
		background-size: 114px 380px; // size of non retina spritesheet
	}
}

/* Bootstrap Overwrites */

.container {
	// padding-left: 0;
	// padding-right: 0;
	@include desktop {
		.container {
			// padding-left: 20px;
			// padding-right: 20px;
		}
	}
}

#election-app {
	// margin-top: 85px;
	padding-bottom: 100px;
	@include tablet-min {
		padding-bottom: 0;
	}
}

#election-app * {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;	
}

#election-app *:before, #election-app *:after {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

/* Fix for clipped ad */

#ad-mobile {
	left: -20px;
	position: relative;
	margin-bottom: 20px;
	@include breakpoint(360) {
		left: auto;
	}
}

/* States Icon styling */

@font-face {
	font-family: 'us_states';
	src:url($font-dir + 'us_states.eot?-ue998k');
	src:url($font-dir + 'us_states.eot?#iefix-ue998k') format('embedded-opentype'),
		url($font-dir + 'us_states.woff?-ue998k') format('woff'),
		url($font-dir + 'us_states.ttf?-ue998k') format('truetype'),
		url($font-dir + 'us_states.svg?-ue998k#us_states') format('svg');
	font-weight: normal;
	font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
	font-family: 'us_states';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.icon-lg-al:before {
	content: "\e500";
}
.icon-lg-ak:before {
	content: "\e501";
}
.icon-lg-az:before {
	content: "\e502";
}
.icon-lg-ar:before {
	content: "\e503";
}
.icon-lg-ca:before {
	content: "\e504";
}
.icon-lg-co:before {
	content: "\e505";
}
.icon-lg-ct:before {
	content: "\e506";
}

.page-icon .icon-lg-dc {
	background: url('../img/dc-lg.gif') no-repeat 15px 0;
}

.page-icon-mini .icon-lg-dc {
	background: url('../img/dc-sm.gif') no-repeat 40px 0;
}

.icon-lg-de:before {
	content: "\e507";
}
.icon-lg-fl:before {
	content: "\e508";
}
.icon-lg-ga:before {
	content: "\e509";
}
.icon-lg-hi:before {
	content: "\e50a";
}
/* ... */

